--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <script src="/js/lib/angular-route.js"></script>
         <script src="/js/lib/bootstrap.min.js"></script>
         <script src="/js/app.js"></script>
+		<script src="/js/Services.js"></script>
         <script src="/js/home.js"></script>
         <script src="/js/view1.js"></script>
         <script src="/js/view2.js"></script>
