--- a/public/home.html
+++ b/public/home.html
@@ -36,8 +36,9 @@
     </div>
 </div>
 
+<h1>{{home.DinningRoomList}}</h1>
 <ul>
 	<li ng-repeat="DinningRoom in home.DinningRoomList">
-	{{	DinningRoom.DrID	}}, 	{{	DinningRoom.DrName	}}				
+	{{	DinningRoom.code	}},-- 	{{	DinningRoom.name	}}				
 	</li>	
 </ul>
