--- a/public/home.html
+++ b/public/home.html
@@ -42,3 +42,7 @@
 	{{	DinningRoom.code	}},-- 	{{	DinningRoom.name	}}				
 	</li>	
 </ul>
+
+<img ng-src="{{home.TrafficLights(1)}}" alt="Description" width="500" height="500"/>
+<img ng-src="{{home.TrafficLights(2)}}" alt="Description" width="500" height="500"/>
+<img ng-src="{{home.TrafficLights(3)}}" alt="Description" width="500" height="500"/>
