--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <title>Skeleton app</title>
 
         <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/main.css">
 
         <script src="/js/lib/jquery-1.11.2.min.js"></script>
         <script src="/js/lib/angular.js"></script>
