--- a/public/home.html
+++ b/public/home.html
@@ -36,13 +36,24 @@
     </div>
 </div>
 
-<h1>{{home.DinningRoomList}}</h1>
+<div>
+<div style="float: right">
+    <img ng-src="{{home.TrafficLights(1)}}" alt="Description"/><br>
+    lksdjkjldsj
+</div>
+
+    <div style="float: right">
+        <img ng-src="{{home.TrafficLights(2)}}" alt="Description"/><br>
+        lksdjkjldsj
+    </div>
+    <div style="float: right">
+        <img ng-src="{{home.TrafficLights(3)}}" alt="Description"/><br>
+        lksdjkjldsj
+    </div>
+</div>
+
 <ul>
 	<li ng-repeat="DinningRoom in home.DinningRoomList">
 	{{	DinningRoom.code	}},-- 	{{	DinningRoom.name	}}				
 	</li>	
 </ul>
-
-<img ng-src="{{home.TrafficLights(1)}}" alt="Description" width="500" height="500"/>
-<img ng-src="{{home.TrafficLights(2)}}" alt="Description" width="500" height="500"/>
-<img ng-src="{{home.TrafficLights(3)}}" alt="Description" width="500" height="500"/>
