--- a/public/home.html
+++ b/public/home.html
@@ -37,23 +37,26 @@
 </div>
 
 <div>
-<div style="float: right">
+<div style="float: left">
     <img ng-src="{{home.TrafficLights(1)}}" alt="Description"/><br>
-    lksdjkjldsj
+   {{home.DiningRoomNames(1)}}
 </div>
-
-    <div style="float: right">
+    <div style="float: left">
         <img ng-src="{{home.TrafficLights(2)}}" alt="Description"/><br>
-        lksdjkjldsj
+        {{home.DiningRoomNames(2)}}
     </div>
-    <div style="float: right">
+    <div style="float: left">
         <img ng-src="{{home.TrafficLights(3)}}" alt="Description"/><br>
-        lksdjkjldsj
+        {{home.DiningRoomNames(3)}}
     </div>
 </div>
+<br>
 
+<div>
 <ul>
+
 	<li ng-repeat="DinningRoom in home.DinningRoomList">
 	{{	DinningRoom.code	}},-- 	{{	DinningRoom.name	}}				
 	</li>	
 </ul>
+ </div>
