--- a/public/home.html
+++ b/public/home.html
@@ -36,7 +36,7 @@
     </div>
 </div>
 
-<div>
+<div style="float: left; width: 100%; display: inline-block;">
 <div style="float: left">
     <img ng-src="{{home.TrafficLights(1)}}" alt="Description"/><br>
    {{home.DiningRoomNames(1)}}
@@ -51,8 +51,9 @@
     </div>
 </div>
 <br>
-
-<div>
+<br>
+<br>
+<div style="float: left; width: 100%;display: inline-block;">
 <ul>
 
 	<li ng-repeat="DinningRoom in home.DinningRoomList">
