--- a/public/home.html
+++ b/public/home.html
@@ -1,16 +1,9 @@
 <div class="row">
     <div class="col-md-8">
-        <h1 class="page-header">Hello {{ home.greeting }}!</h1>
+        <h1 class="page-header">Dining Rooms status:</h1>
     </div>
 </div>
 
-
-
-<div class="row">
-    <div class="col-md-8">
-        <p>Dining Rooms</p>
-    </div>
-</div>
 
 <div style="float: left; width: 100%; display: inline-block;" class="row">
     <div style="float: left" class="col-xs-4 col-md-2" ng-repeat="PlaceShareStat in home.placeShareStatus">
@@ -19,8 +12,7 @@
             <br>
             <div class="caption">
                 <h2> {{PlaceShareStat.name}} </h2>
-                <br>
-                <!--Total places: {{home.DinningRoomList[PlaceShareStat.code -1].capacity}}-->
+                 <div>{{PlaceShareStat.freePlaces}} / {{home.DinningRoomList[$index].capacity}}</div>
             </div>
         </div>
     </div>
