--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,9 @@
 <div class="row">
     <div class="col-md-8">
-        <h1 class="page-header">Dining Rooms status:</h1>
+        <h1 class="page-header">
+            <img src="images/ICON.png" style="width: 20%;height: 20%"/>
+            Dining Rooms status:
+        </h1>
     </div>
 </div>
 
