--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,9 @@
     </head>
 
     <body>
-        <header class="navbar">
-            <div style="float: right">
+    <center>
+
+        <div style="float: right;margin: 54px;">
             <h2>Current time:</h2>
             <div id="clockDisplay" class="clockStyle"></div>
             <script>
@@ -68,21 +69,10 @@
                 }
                 renderTime();
             </script>
-                </div>
-
-
-            <div class="container">
-                <nav>
-                    <ul class="nav navbar-nav">
-
-                    </ul>
-                </nav>
-            </div>
-        </header>
-
+        </div>
         <div class="container" ng-view></div>
 
 
-
+    </center>
     </body>
 </html>
