--- a/public/home.html
+++ b/public/home.html
@@ -35,6 +35,7 @@
             <div class="caption">
                 <h2><b> {{PlaceShareStat.name}} </b></h2>
                  <div><b>Available Seats: {{PlaceShareStat.freePlaces}} </b><br> (Total: {{home.DinningRoomList[$index].capacity}})</div>
+				  <div>Last Update: {{PlaceShareStat.upDate}}</div>
             </div>
         </div>
     </div>
