--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         <script src="/js/app.js"></script>
 		<script src="/js/Services.js"></script>
         <script src="/js/home.js"></script>
+		<script src="/js/Admin.js"></script>
         <script src="/js/view1.js"></script>
         <script src="/js/view2.js"></script>
 
@@ -35,6 +36,16 @@
     </head>
 
     <body>
+	<header class="navbar">
+            <div class="container">
+                <nav>
+                    <ul class="nav navbar-nav">
+                        <li><a href="#/">Home</a></li>
+                        <li><a href="#/Admin">Admin</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
     <center>
 
         <div style="float: right;margin: 54px;">
