--- a/public/Admin.html
+++ b/public/Admin.html
@@ -4,7 +4,7 @@
 	    <input id="amount" name="amount" type="TEXT" ng-model=Admin.myModel.amount>
 		Dining Room number:<input type="TEXT" ng-model=Admin.myModel.room_number>
 		<input type="button" value="+" ng-click="Admin.addDinningPersonWithParams()">
-		<input type="button" value="-" ng-click="Admin.delDinningPerson()">
+		<input type="button" value="-" ng-click="Admin.deleteDinningPersonWithParams()">
 	 
 	   <br><br><br><br>
 		<!-- <button ng-click=Admin.startDemo()>Start Demo</button>
