--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/main.css">
-
+		<script src="//js.pusher.com/3.0/pusher.min.js"></script>
         <script src="/js/lib/jquery-1.11.2.min.js"></script>
         <script src="/js/lib/angular.js"></script>
         <script src="/js/lib/angular-route.js"></script>
